syntax = "proto3";

package proto;
option go_package = "shared_proto";
option optimize_for = SPEED;

import "github.com/lightpaw/male7/pb/shared_proto/base.proto";
import "github.com/lightpaw/male7/pb/shared_proto/combat.proto";
import "github.com/lightpaw/male7/pb/shared_proto/snapshot.proto";

// 百战其他数据
message BaiZhanMiscProto {
    int32 win_point = 1; // 胜利加的积分
    int32 fail_point = 2; // 失败加的积分

    repeated int32 recover_times_time = 3 [packed = false]; // 恢复次数的时间，单位秒，获取当日的恢复次数的时间是用当天的0点+恢复次数的时间，遍历，如果当前时间>=该时间，那么次数就加上去
    repeated int32 recover_times = 4 [packed = false]; // 恢复的次数

    int32 max_record = 5; // 最大挑战次数记录

    int32 show_rank_count = 7; // 排行榜的展示数量
}

// 军衔等级数据
message JunXianLevelDataProto {
    int32 level = 1; // 军衔等级
    string name = 2; // 军衔名字
    string icon_id = 8; // 图标id
    int32 level_up_percent = 3; // 等级上升的百分比，最后一级不需要读取该数据
    int32 level_up_point = 4; // 等级上升的分数，最后一级不需要读取该数据
    int32 level_down_percent = 5; // 等级下降的百分比，第一级不需要读取该数据
    int32 level_down_point = 6; // 等级上升的分数，第一级不需要读取该数据
    PrizeProto daily_salary = 7; // 每日俸禄
    int32 daily_hufu = 10; // 每日俸禄虎符
    SpriteStatProto assembly_stat = 9; // 集结属性
}

// 军衔等级奖励数据
message JunXianLevelPrizeProto {
    int32 id = 1; // id
    int32 level = 2; // 需要的军衔等级
    int32 point = 3; // 需要的积分
    PrizeProto prize = 4; // 达成奖励
}

message BaiZhanReplayProto {
    string link = 1; // 回放地址
    CombatObjProto attacker = 2; // 进攻方，进攻方永远不是npc
    CombatShareProto attacker_share = 7; // 进攻方战斗分享
    CombatObjProto defender = 3; // 防守方
    CombatShareProto defender_share = 8; // 防守方战斗分享
    bool is_defender_npc = 4; // 防守方是不是npc，如果是npc，那么不可以查对方看数据
    bool is_attacker_win = 5; // 进攻方是否赢了
    int32 time = 6; // 发生时间unix时间
}

message CombatObjProto {
    HeroBasicProto hero = 11; // 英雄数据

    // 下面字段过期处理
    bytes id = 1 [deprecated = true];
    string name = 2 [deprecated = true];
    string guild = 3 [deprecated = true];
    string head = 4 [deprecated = true];
    int32 guild_id = 5 [deprecated = true];
    string guild_flag_name = 6 [deprecated = true]; // 联盟旗号
    int32 country = 10 [deprecated = true]; // 国家
    bool male = 7 [deprecated = true]; // true表示男女
    int32 level = 9 [deprecated = true]; // 等级

    int32 fight_amount = 8; // 战斗力

    repeated Race race = 12 [packed = false]; // 阵容，0表示空位
}

message BaiZhanObjProto {
    int32 challenge_times = 1; // 当前挑战次数
    int32 point = 2; // 当前积分
    bool is_collect_salary = 3; // 是否有领取俸禄
    int32 last_collected_jun_xian_prize_id = 4; // 最后领取的军衔奖励id，0表示没有领取 下一个奖励是 last_collected_jun_xian_prize_id+1
    int32 jun_xian_level = 5; // 军衔等级
    int32 last_jun_xian_level = 6; // 上次的军衔等级，如果是非0，跟当前等级的军衔比较，提示军衔升级还是降级，如果两个军衔等级相等，看策划需求进行提示
    int32 history_max_jun_xian_level = 7; // 历史最高军衔等级
    repeated int32 history_max_points = 8 [packed = false]; // 历史最高积分
}

enum LevelChangeType {
    // 要升级
    LEVEL_UP = 0;
    // 保持等级不变
    LEVEL_KEEP = 1;
    // 要降级
    LEVEL_DOWN = 2;
}

message BaiZhanRankObjProto {
    HeroBasicProto basic = 1;
    int32 point = 2; // 积分
    LevelChangeType level_change_type = 3; // 等级变更情况
    int32 fight_amount = 4; // 战斗力
}
